# nodegui-plugin-webview

./: CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
config/: init.cmake  qtweb.cmake
public/: index.html
scripts/: install.js
src/: demo-transparent.ts  demo.ts  index.ts
src/cpp/: main.cpp
src/cpp/QStatusBar/: nstatusbar.hpp  qstatusbar_wrap.cpp  qstatusbar_wrap.h
src/cpp/QWebChannel/: nwebchannel.hpp  qwebchannel_wrap.cpp  qwebchannel_wrap.h
src/cpp/QWebEnginePage/: qwebenginepage_wrap.cpp  qwebenginepage_wrap.h
src/cpp/QWebEngineSettings/: qwebenginesettings_wrap.cpp  qwebenginesettings_wrap.h
src/cpp/QWebEngineView/: nwebengineview.hpp  qwebengineview_wrap.cpp  qwebengineview_wrap.h
src/cpp/init/: init.cpp
src/lib/: QWebChannel.ts  QWebEnginePage.ts  QWebEngineSettings.ts  QWebEngineView.ts
src/lib/QStatusBar/: index.ts
src/lib/utils/: addon.ts
